--- a/assets/style/home/index.css
+++ b/assets/style/home/index.css
@@ -39,6 +39,7 @@
 }
 body {
   width: 100%;
+  overflow-x: hidden;
 }
 header {
   width: 100%;
@@ -415,9 +416,9 @@ nav a {
   font-family: var(--font-family);
 }
 #absolute__text--project {
-    font-weight: var(--font-weight-ultrabold);
-    padding: 2.5rem 0 2.5rem 0;
-    align-self: flex-start;
+  font-weight: var(--font-weight-ultrabold);
+  padding: 2.5rem 0 2.5rem 0;
+  align-self: flex-start;
 }
 .long__line {
   width: 96%;
@@ -490,7 +491,7 @@ nav a {
 .left__slide--project-card p {
   font-size: var(--font-size-heading-XL);
   font-weight: var(--font-weight-bold);
-  padding: 0.5rem 0 0 0 ;
+  padding: 0.5rem 0 0 0;
 }
 .d {
   font-size: var(--font-size-body-X);
@@ -511,7 +512,192 @@ nav a {
   transition: all 0.15s linear;
 }
 .go__to--fullprojects:hover {
-  translate: -10% ;
+  translate: -10%;
+}
+.process {
+  width: 100%;
+  padding: 2rem 2.5rem 7.5rem 2.5rem;
+  font-family: var(--font-family);
+  background-image: url("./home/Backphoto.png");
+  background-position: cover;
+  background-size: cover;
+  color: var(--font-color-white);
+}
+.process__top--desc {
+  width: 100%;
+  font-weight: var(--font-weight-semibold);
+  padding: 0 0 0.5rem 0;
+}
+.process__top--desc p:last-child {
+  color: var(--font-color-sub);
+  padding: 0.5rem 0 0 0;
+}
+.process__content {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+.process__box--content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.process__content--desc {
+  font-size: var(--font-size-heading-XXL);
+  font-weight: var(--font-weight-semibold);
+  grid-area: 1 / 2 / 2 / 3;
+}
+.process__box--number p{
+  color: var(--font-color-sub);
+}
+.process__box--image {
+  width: 100%;
+  height: 6rem;
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+.process__box--image img {
+  width: 100%;
+  height: 100%;
+  object-position: center;
+  object-fit: cover;
+}
+.process__box--desc p:first-child {
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-bold);
+  padding-bottom: 0.25rem;
+}
+.process__box--desc p:last-child {
+  font-size: var(--font-size-body-XS);
+  color: var(--font-color-sub);
+  font-weight: var(--font-weight-semibold);
+}
+.process__box--content:first-child {
+  grid-area: 1 / 4 / 2 / 5;
+}
+.process__box--content:nth-child(2) {
+  grid-area: 1 / 4 / 2 / 5;
+}
+.process__box--content:nth-child(3) {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.process__box--content:nth-child(4) {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.process__box--content:nth-child(5) {
+  grid-area: 2 / 3 / 3 / 4;
+}
+.process__box--content:nth-child(6) {
+  grid-area: 2 / 4 / 3 / 5;
+}
+.process__box--content-desc {
+  grid-area: 3 / 3 / 4 / 4;
+}
+.process__box--content:nth-child(7) {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.process__box--content-desc {
+  align-self: center;
+}
+.process__box--content-desc p {
+  font-size: var(--font-size-body-XS);
+}
+.process__box--content:last-child {
+  grid-area: 3 / 4 / 4 / 5;
+}
+.team {
+  width: 100%;
+  padding: 2.5rem 2.5rem 7.5rem 2.5rem;
+  font-family: var(--font-family);
+}
+.team__slogan {
+  width: 100%;
+  translate: 20%;
+}
+.team__slogan p {
+  font-size: var(--font-size-heading-XXL);
+  font-weight: var(--font-weight-bold);
+}
+.team__content--main {
+  width: 100%;
+  display: flex;
+  gap: 1.5rem;
+  padding: 2rem 0 2rem 0;
+  justify-content: space-between;
+}
+.team__content--desc p{
+  font-size: var(--font-size-heading-XL);
+  font-weight: var(--font-weight-bold);
+}
+.team__content--user {
+  width: 20rem;
+  height: 20rem;
+  overflow: hidden;
+  border-radius: 0.5rem;
+  position: relative;
+  padding: 15rem 0 0 3rem;
+}
+.team__content--user img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -999;
+}
+.team__content--user p {
+  font-weight: var(--font-weight-semibold);
+  color: var(--font-color-white);
+}
+.team__content--user p:last-child {
+  color: #F1DFC2;
+}
+.team__content--submain {
+  display: flex;
+  justify-content: flex-end;
+  gap: 2rem;
+}
+.bigger__team--content-user {
+  background-image: url(./home/PEOPLE_4.avif);
+  background-position: center;
+  background-size: cover;
+  height: 30rem;
+  width: 40rem;
+  border-radius: 0.5rem;
+  position: relative;
+  padding: 1rem 2.5rem 2.5rem 2.5rem;
+  color: var(--font-color-white);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+.team__content--submain .team__content--user:last-child {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  flex-direction: column;
+}
+.team__content--submain .team__content--user:last-child p {
+  color: var(--font-color-black);
+}
+.team__content--submain .team__content--user:last-child p:first-child {
+  font-size: var(--font-size-heading-XXL);
+  font-weight: var(--font-weight-bold);
+}
+.left__content--team--user {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+.right__content--team--user p{
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
 }
 [data-aos] {
   visibility: hidden;
