--- a/assets/style/home/index.css
+++ b/assets/style/home/index.css
@@ -40,6 +40,7 @@
 body {
   width: 100%;
   overflow-x: hidden;
+  background-color: #f1f1f1;
 }
 header {
   width: 100%;
@@ -160,7 +161,7 @@ nav a {
   color: var(--font-color-white);
   justify-content: center;
   align-items: center;
-  padding: 1.5rem 2.5rem 1.5rem 2.5rem;
+  padding: 1.5rem 2.5rem 4rem 2.5rem;
 }
 .icon {
   width: 25%;
@@ -550,7 +551,7 @@ nav a {
   font-weight: var(--font-weight-semibold);
   grid-area: 1 / 2 / 2 / 3;
 }
-.process__box--number p{
+.process__box--number p {
   color: var(--font-color-sub);
 }
 .process__box--image {
@@ -628,7 +629,7 @@ nav a {
   padding: 2rem 0 2rem 0;
   justify-content: space-between;
 }
-.team__content--desc p{
+.team__content--desc p {
   font-size: var(--font-size-heading-XL);
   font-weight: var(--font-weight-bold);
 }
@@ -655,7 +656,7 @@ nav a {
   color: var(--font-color-white);
 }
 .team__content--user p:last-child {
-  color: #F1DFC2;
+  color: #f1dfc2;
 }
 .team__content--submain {
   display: flex;
@@ -695,10 +696,500 @@ nav a {
   flex-direction: column;
   gap: 0.25rem;
 }
-.right__content--team--user p{
+.right__content--team--user p {
   font-size: var(--font-size-body-XL);
   font-weight: var(--font-weight-semibold);
 }
+.faq {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 2.5rem 7rem 2.5rem;
+  font-family: var(--font-family);
+}
+.faq__top--desc {
+  width: 100%;
+  padding: 1rem 0 3rem 0;
+}
+.faq__top--desc p {
+  font-weight: var(--font-weight-bold);
+}
+.faq__content--container {
+  width: 100%;
+  display: flex;
+}
+.left__content--container {
+  height: 100%;
+  width: 30%;
+}
+.left__content--container p {
+  font-size: var(--font-size-heading-XXL);
+  font-weight: var(--font-weight-bold);
+}
+.right__content--container {
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.faq__content--main {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.faq__content--main .long__line {
+  height: 0.01rem;
+  background: var(--font-color-sub);
+  width: 100%;
+  position: relative;
+}
+.faq__content--question {
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+}
+.faq__content--answer {
+  font-weight: var(--font-weight-semibold);
+  color: var(--font-color-sub);
+  line-height: 2;
+  overflow: hidden;
+  max-height: 0rem;
+  opacity: 0;
+  transition: all 0.15s linear;
+}
+.faq__content--answer.open__answer {
+  max-height: 100rem;
+  opacity: 1;
+}
+.add__faq--section {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.add__faq--section p:first-child {
+  font-size: var(--font-size-body-X);
+  color: var(--font-color-sub);
+}
+.add__question {
+  display: flex;
+  gap: 1rem;
+}
+.add__question p {
+  font-size: var(--font-size-heading-XL);
+  color: var(--font-size-body-XL);
+}
+.carousel {
+  width: 100%;
+  height: 5rem;
+  background-color: #f9e4ab;
+  display: flex;
+  gap: 5rem;
+  overflow: hidden;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+}
+.carousel__group {
+  display: flex;
+  height: 100%;
+  align-items: center;
+  gap: 5rem;
+  font-family: var(--font-family);
+  animation: carousel 10s linear infinite;
+}
+.carousel__items {
+  display: flex;
+  white-space: nowrap;
+}
+.carousel__items i {
+  font-size: var(--font-size-body-XL);
+  color: var(--font-color-white);
+}
+.carousel__items p {
+  font-size: var(--font-size-body-XL);
+}
+.carousel__items p:nth-child(3) {
+  padding: 0 0.5rem 0 0.5rem;
+  font-weight: var(--font-weight-bold);
+}
+.middle__hero {
+  width: 100%;
+  padding: 15rem 2.5rem 7rem 2.5rem;
+  background-image: url("./home/Backphotos\ \(place\ your\ images\).png");
+  background-size: cover;
+  background-position: center;
+  font-family: var(--font-family);
+  color: var(--font-color-white);
+}
+.middle__hero--content {
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+  padding: 0 0 0 20rem;
+}
+.middle__hero--content p:last-child {
+  color: #f1dfc2;
+}
+.middle__hero--main-desc {
+  padding: 5rem 0 5rem 0;
+  font-size: var(--font-size-heading-super-titan);
+  font-weight: var(--font-weight-bold);
+}
+.middle__hero--main-desc p:last-child {
+  padding: 2rem 0 0 20rem;
+}
+.middle__hero--btn {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+}
+.order__btn {
+  padding: 1rem 2rem 1rem 2rem;
+  border: 0.2px solid white;
+  display: flex;
+  gap: 2rem;
+  border-radius: 1rem;
+  align-items: center;
+  overflow: hidden;
+}
+.order__btn p {
+  transition: all 0.15s linear;
+}
+.order__icon i {
+  transform: translate(220%, -170%);
+  transition: 0.15s linear;
+}
+.order__btn:hover p {
+  transform: translateX(10%);
+}
+.order__btn:hover .order__icon i {
+  transform: translate(0);
+}
+.review {
+  width: 100%;
+  padding: 2.5rem 2.5rem 7rem 2.5rem;
+}
+.review__top--desc p:first-child {
+  font-weight: var(--font-weight-bold);
+  font-family: var(--font-family);
+}
+.review__top--desc p:last-child {
+  color: var(--font-color-sub);
+  padding: 0.5rem 0 0 0;
+  font-family: var(--font-family);
+}
+.review__main--content {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  padding: 3rem 0 1rem 0;
+}
+.right__reivew--content {
+  width: 30%;
+  font-family: var(--font-family);
+  height: 100%;
+}
+.review__icon {
+  width: 7rem;
+  height: 7rem;
+  background-color: red;
+}
+.review__desc p:first-child {
+  padding: 0.5rem 0 0.25rem 0;
+}
+.review__desc p:last-child {
+  color: var(--font-color-sub);
+}
+.left__review--content {
+  width: 70%;
+  font-family: var(--font-color-sub);
+  height: 100%;
+}
+.left__review--content p:first-child {
+  font-size: var(--font-size-body-XXL);
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-bold);
+  padding: 0 0 2rem 0;
+}
+.left__review--content p:last-child {
+  font-size: var(--font-size-body-XL);
+  white-space: wrap;
+  font-family: var(--font-family);
+  font-weight: var(--font-weight-semibold);
+  color: var(--font-color-sub);
+}
+.review__turn--leftright {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.client__job,
+.client__name,
+.client__desc--main,
+.client__desc--sub {
+  transition: all 0.5s linear;
+}
+.review__turn--left,
+.review__turn--right {
+  width: 5rem;
+  height: 5rem;
+  background: transparent;
+  font-size: var(--font-size-body-XXL);
+  font-weight: var(--font-weight-semibold);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.advantage {
+  width: 100%;
+  padding: 0 2.5rem 7rem 2.5rem;
+}
+.advantage__top--desc {
+  width: 100%;
+  font-family: var(--font-family);
+}
+.advantage__top--desc p:first-child {
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-bold);
+}
+.advantage__top--desc p:last-child {
+  font-size: var(--font-size-heading-XXL);
+  padding: 1rem 0 4.5rem 20rem;
+}
+.advantage__content--main {
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, minmax(16rem, 1fr));
+  column-gap: 1rem;
+  row-gap: 1rem;
+}
+.advantage__content--box {
+  border-radius: 0.5rem;
+  padding: 2.5rem;
+  font-family: var(--font-family);
+}
+.advantage__content--box:nth-child(1) {
+  grid-area: 1 / 1 / 3 / 3;
+  background: var(--font-color-white);
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+}
+.advantage__content--box:nth-child(2) {
+  grid-area: 1 / 3 / 3 / 6;
+  background-image: url("./home/ADVANTAGE_1.avif");
+  background-position: left top;
+  background-size: cover;
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+}
+.advantage__content--box:nth-child(3) {
+  grid-area: 1 / 6 / 2 / 7;
+  background-image: url("./home/ADVANTAGE_2.avif");
+  background-size: cover;
+  background-position: center center;
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+}
+.advantage__content--box:nth-child(4) {
+  grid-area: 2 / 6 / 3 / 7;
+  background-image: url("./home/ADVANTAGE_3.avif");
+  background-size: cover;
+  background-position: center center;
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.advantage__content--box:nth-child(5) {
+  grid-area: 3 / 1 / 5 / 3;
+  overflow: hidden;
+  background: var(--font-color-white);
+  position: relative;
+}
+.top__advantage--desc {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  gap: 1rem;
+}
+.top__advantage--desc p:first-child {
+  font-size: var(--font-size-body-XL);
+}
+.bottom__advantage--desc {
+  width: 100%;
+  position: absolute;
+  font-size: var(--font-size-body-XL);
+  bottom: 2.5rem;
+  left: 2.5rem;
+}
+.image__advantage {
+  display: flex;
+  overflow: hidden;
+}
+.image__box {
+  height: 5rem;
+  width: 10rem;
+  background: var(--font-color-white);
+  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
+  overflow: hidden;
+  rotate: -20deg;
+}
+.image__img {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.image__img img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+.advantage__content--box:nth-child(6) {
+  grid-area: 3 / 3 / 5 / 4;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+}
+.back__image--content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+.advantage__content--box:nth-child(6) .back__image--content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  filter: blur(0.2rem);
+}
+.back__image--content-reverse {
+  position: absolute;
+  z-index: 1;
+  width: 70%;
+  height: 65%;
+  border-radius: 0.5rem;
+  top: 2.5rem;
+  overflow: hidden;
+  border: 0.01px solid white;
+}
+.back__image--content-reverse img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+}
+.advantage__content--box:nth-child(7) {
+  grid-area: 3 / 4 / 5 / 7;
+  background-image: url("./home/ADVANTAGE_5.avif");
+  background-size: cover;
+  background-position: center center;
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-semibold);
+}
+.create {
+  width: 100%;
+  padding: 2.5rem 2.5rem 10rem 2.5rem;
+}
+.create__top--desc {
+  width: 100%;
+  padding: 2rem 0 4rem 0;
+  font-family: var(--font-family);
+  font-size: var(--font-size-body-XL);
+  font-weight: var(--font-weight-bold);
+}
+.create__main--content {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(3, minmax(10rem, 1fr));
+  column-gap: 2rem;
+  row-gap: 2rem;
+  overflow: hidden;
+  font-family: var(--font-family);
+}
+.create__main--box img {
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 1rem;
+}
+.create__main--box:nth-child(1) {
+  grid-area: 1 / 1 / 2 / 3;
+}
+.create__main--box:nth-child(1) p {
+  font-size: var(--font-size-heading-XXL);
+  font-weight: var(--font-weight-bold);
+}
+.create__main--box:nth-child(2) {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.create__main--box:nth-child(3) {
+  grid-area: 1 / 4 / 2 / 5;
+}
+.create__main--box:nth-child(4) {
+  grid-area: 1 / 5 / 2 / 6;
+}
+.create__main--box:nth-child(5) {
+  grid-area: 2 / 1 / 3 / 3;
+}
+.create__main--box:nth-child(6) {
+  grid-area: 2 / 3 / 3 / 4;
+}
+.create__main--box:nth-child(7) {
+  grid-area: 2 / 4 / 3 / 5;
+}
+.create__main--box:nth-child(8) {
+  grid-area: 2 / 5 / 3 / 7;
+}
+.create__main--box:nth-child(9) {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.create__main--box:nth-child(10) {
+  grid-area: 3 / 4 / 4 / 5;
+}
+.create__main--box:nth-child(11) {
+  grid-area: 3 / 5 / 4 / 6;
+}
+.create__main--box:nth-child(3) p,
+.create__main--box:nth-child(9) p,
+.create__main--box:nth-child(11) p {
+  color: var(--font-color-sub);
+}
+.create__main--box:nth-child(3),
+.create__main--box:nth-child(9),
+.create__main--box:nth-child(11) {
+  display: flex;
+  align-items: flex-end;
+}
+footer {
+  padding: 0 2.5rem 2.5rem 2.5rem;
+  background-image: url("./home/Mainphoto.png");
+}
+@keyframes carousel {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
 [data-aos] {
   visibility: hidden;
 }
